# loglama

./: .gitignore  .pre-commit-config.yaml  COMMANDS_COMPARISON.md  COMPONENT_INTEGRATION.md  ECOSYSTEM_INTEGRATION.md  Makefile  README.md  TECHNICAL_DIAGRAMS.md  pyproject.toml  test_ecosystem_logging.py
debug/: README.md  debug_utils.py
examples/: README.md  bash_example.sh  pylama_integration_example.py
examples/loglama-grafana/: README.md  setup-grafana-connection.py
examples/multi_component_example/: model_inference.py  run_workflow.sh
loglama/cli/commands/: project_commands.py  update_loggers.py
loglama/collectors/: log_collector.py
loglama/core/: env_manager.py
scripts/: MIGRATION_GUIDE.md  README.md  fix_type_errors_v2.py  migrate_to_loglama.py  migration_report.json  test_env_system.py  test_loglama_examples.py  test_migration.py  universal_log_migrator.py
scripts/migrators/: pylogs_migrator.py
tests/: test_basic.py
