[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "loglama"
version = "0.1.18"
description = "Powerful logging and debugging utility for PyLama ecosystem"
authors = [ "Tom Sapletta <info@softreck.dev>",]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/py-lama/loglama"
classifiers = [ "Development Status :: 3 - Alpha", "Intended Audience :: Developers", "License :: OSI Approved :: Apache Software License", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Topic :: System :: Logging", "Topic :: Software Development :: Debuggers", "Topic :: Software Development :: Libraries :: Python Modules",]

[tool.black]
line-length = 120
target-version = [ "py310",]

[tool.isort]
profile = "black"
line_length = 120

[project.urls]
Homepage = "https://github.com/py-lama/loglama"
Documentation = "https://py-lama.github.io/loglama/"
Repository = "https://github.com/py-lama/loglama"
Changelog = "https://github.com/py-lama/loglama/blob/main/CHANGELOG.md"
Tracker = "https://github.com/py-lama/loglama/issues"
Download = "https://pypi.org/project/loglama/"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.1"
click = "^8.2.1"
rich = "^14.0.0"
sqlalchemy = "^2.0.41"
python-dotenv = "^1.1.0"
requests = "^2.32.3"
pydantic = "^2.11.4"
colorama = "^0.4.6"
structlog = "^25.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.15.0"
